<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Champlain College Library App</string>
    <string name="action_settings">Settings</string>
	<string name="title_activity_spinner">SpinnerActivity</string> 
	<string name="spinner_title">What will you search by?</string>
    
    <string-array name="entry_array">
        <item>Keyword</item>
        <item>Author</item>
        <item>Title</item>
        <item>Subject</item>
        <item>ISBN/ISSN</item>
        <item>Call Number</item>
    </string-array>
    
    <string name="entry_prompt">Choose an Entry Type</string>
    <string name="submit">Submit</string>
    <string name="return">Return</string>
    <string name="name">Name: </string>
    <string name="author">Author: </string>
    <string name="type">Type: </string>
    <string name="location">Location: </string>
    <string name="status">Status: </string>
    <string name="callNumber">Call Number: </string>
    <string name="empty">Empty</string>

</resources>
